# wsr

./: ARCHITECTURE.md  Cargo.toml  README.md  ROADMAP.md  cliff.toml
.github/workflows/: check-docs.yml  check-fmt.yml  check-lint.yml  ci.yml  test.yml
crates/: README.md
crates/wsr/: Cargo.toml
crates/wsr-bench/: Cargo.toml
crates/wsr-bench/src/: lib.rs
crates/wsr-cache/: Cargo.toml
crates/wsr-cache/src/: lib.rs
crates/wsr-cli/: Cargo.toml
crates/wsr-cli/src/: lib.rs
crates/wsr-client/: Cargo.toml
crates/wsr-client/src/: lib.rs
crates/wsr-engine/: Cargo.toml
crates/wsr-engine/src/: lib.rs
crates/wsr-expr/: Cargo.toml
crates/wsr-expr/src/: lib.rs
crates/wsr-fs/: Cargo.toml
crates/wsr-fs/src/: lib.rs
crates/wsr-gha/: Cargo.toml
crates/wsr-gha/src/: lib.rs
crates/wsr-git/: Cargo.toml
crates/wsr-git/src/: lib.rs
crates/wsr-resolver/: Cargo.toml
crates/wsr-resolver/src/: lib.rs
crates/wsr-sandbox/: Cargo.toml
crates/wsr-sandbox/src/: lib.rs
crates/wsr-shell/: Cargo.toml
crates/wsr-shell/src/: lib.rs
crates/wsr-tracing/: Cargo.toml
crates/wsr-tracing/src/: lib.rs
crates/wsr-types/: Cargo.toml
crates/wsr-types/src/: lib.rs
crates/wsr-wasix/: Cargo.toml
crates/wsr-wasix/src/: lib.rs
crates/wsr/src/: lib.rs
crates/wsr/src/commands/: cache.rs  daemon.rs  hook.rs  init.rs  inspect.rs  list.rs  mod.rs  run.rs  status.rs
