[package]
name        = "wsr-client"
description = "HTTP client for fetching actions and Wasm components, with SHA pinning"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
categories.workspace = true

[dependencies]
anyhow.workspace    = true
wsr-types.workspace = true
