[package]
name        = "wsr-fs"
description = "Filesystem utilities, VFS abstraction, and atomic write helpers for wsr"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
categories.workspace = true

[dependencies]
anyhow.workspace  = true
wsr-types.workspace = true
