[package]
name        = "wsr-sandbox"
description = "Tier 1 sandbox: Wasmtime + WASI Preview 3, one isolated instance per step"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
categories.workspace = true

[dependencies]
anyhow.workspace     = true
wsr-cache.workspace  = true
wsr-types.workspace  = true
