[package]
name        = "wsr-tracing"
description = "Structured logging and output formatting for wsr (human + GHA annotations)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
categories.workspace = true

[dependencies]
tracing.workspace            = true
tracing-subscriber.workspace = true
