[package]
name        = "wsr-wasix"
description = "Tier 2 sandbox: Wasmer + WASIX for POSIX-compatible workloads (transitional layer)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
categories.workspace = true

[dependencies]
anyhow.workspace    = true
wsr-cache.workspace = true
wsr-types.workspace = true
